--- a/index.html
+++ b/index.html
@@ -1,14 +1,26 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/asset/style.css">
-    <title>Desafio 6 Portafolio
-    </title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/asset/style.css" />
+
+    <title>Desafio 6 Portafolio</title>
+  </head>
+  <body>
+    <header>
+      <nav>
+        <ul class="CabezeraIcono">
+          <li></li>
+        </ul>
+        <ul class="BarraLateral">
+          <li><a href="#">Inicio</a></li>
+          <li><a href="#">Portafolio</a></li>
+          <li><a href="#">Experiencia</a></li>
+          <li><a href="#">Contacto</a></li>
+        </ul>
+      </nav>
+    </header>
+  </body>
 </html>
